--- a/miruene_demo_v2/www/op_index.html
+++ b/miruene_demo_v2/www/op_index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 <head>
   <!-- 機器の操作インデックス -->
@@ -27,7 +27,7 @@
 
   </script>
 </head>
-<body>
+<body oncontextmenu="return false;">
   <ons-page>
   
   <p></p>
@@ -84,6 +84,5 @@ light_op_index.html
 
 
 
-</ons-page>
 </body>
 </html>
