--- a/miruene_demo_v2/www/pre_aircon.html
+++ b/miruene_demo_v2/www/pre_aircon.html
@@ -47,7 +47,7 @@
   </script>
 </head>
 
-<body>
+<body oncontextmenu="return false;">
 
  <!-- エアコン説明 -->
     <div style="position: relative;margin: 0px; padding: 0px;width:100%;height: auto;">
