--- a/miruene_demo_v2/www/scene_index.html
+++ b/miruene_demo_v2/www/scene_index.html
@@ -25,7 +25,7 @@
 
   </script>
 </head>
-<body>
+<body oncontextmenu="return false;">
 
         <div style="position: relative;margin: 0px; padding: 0px;width:100%;height: auto;">
             <img border="0" src="./hdimages/bk_scn_menu.png" width="2736" height="1824" style="position: absolute;top:0;left:0">
@@ -51,7 +51,7 @@
                 <img border="0" src="./hdimages/btn_kitaku.png " class="btn_tap_anim btn_tap_sound" alt="帰宅前半" style="position:absolute;left:578px;top:1312px;">
             </a>
             <a href="./top_menu.html">
-                <img border="0" src="./hdimages/btn_return.png" class="btn_tap_anim btn_tap_sound" style="position:absolute;left:144px;top:1424px;" alt="トップに戻る">
+                <img border="0" src="./hdimages/btn_return.png" class="btn_tap_anim " style="position:absolute;left:144px;top:1424px;" alt="トップに戻る">
             </a>
         </div>
 
