--- a/miruene_demo_v2/www/scn_nechu.html
+++ b/miruene_demo_v2/www/scn_nechu.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src * data:; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
     <script src="./js/jquery-1.11.3.min.js"></script>
     <!-- 効果音-->
+     <!-- 効果音-->
     <script src="./js/ion.sound.min.js"></script>
     <script src="./js/sound.js"></script>
 
@@ -14,10 +15,9 @@
     <link rel="stylesheet" href="css/anime_btn.css">
     <script src="js/btn.js"></script>
     <script src="js/video.js"></script>
-
     <script src="js/ir_send.js"></script>
-
     <script src="js/scenario.js"></script>
+    <script src="js/keycheck.js"></script>
 
 	<style>
 
@@ -42,32 +42,34 @@
     	const NO_OPRATIN_TIME = 38000; //何もしなければ操作画面への遷移
 		const RETURN_HOME_LATTER_HALF =12000 ;//･帰宅後半の動画開始
 
-        setBtnAnim();	
+        setBtnAnim();
+		setBtnSound();
+	
 
 		/*
 			イベントハンドラー
 		*/
     	// 一定期間操作がなければ　機器操作index
-    	
-		setInterval("opration_check()",NO_OPRATIN_TIME); //
-    	//  すべて
+		setInterval(function(){opration_check('scn_menu.html','SCENARIO_POST_RETURNING')},NO_OPRATIN_TIME);
+
+
         //起床
-//		scenario_post_str ="SCENARIO_POST_WAKEUP";
 		scenario_exec("SCENARIO_HEATPROTECT");
 
 		//シナリオインデクス(戻る)
 		$(document).on('click', '#scene_top_button', function (e) {
 		    console.log("シナリオインデクス(戻る)");
-            location.href = "scn_menu.html";
+		   scenario_exec("SCENARIO_POST_RETURNING");
+			 setTimeout(	function (){
+				location.href="scn_menu.html";
+			 } , 2500);	
 		});
-
-
     });
 
   </script>
 
 </head>
-<body>
+<body oncontextmenu="return false;">
 
 
  <!-- 
@@ -82,10 +84,7 @@
         <img src="./hdimages/red_scn_curtain.png" class="scene_frame blink_anime small_view scenario-aircom" >
         <img src="./hdimages/red_scn_aircon.png" class="scene_frame blink_anime small_view scenario-cur" >
         <img border="0" src="./hdimages/bk_nechu.png"  style="position: absolute;top:0;left:0" >
-
-	<div id="scene_top_button">
-		<img border="0" src="./hdimages/btn_scn_return.png" class="btn_tap_anim exp_index" style="position: absolute;left:  2289px;top:1409px;"  alt="機器の操作に戻る">
-	</div>
+		<img border="0" src="./hdimages/btn_scn_return.png" id="scene_top_button" class="btn_tap_anim btn_tap_sound " style="position: absolute;left:  2289px;top:1409px;"  alt="機器の操作に戻る">
 </div>
     
 </body>
