--- a/miruene_demo_v2/www/kiki_tv.html
+++ b/miruene_demo_v2/www/kiki_tv.html
@@ -18,74 +18,27 @@
     <script src="js/scenario.js"></script>
     <link rel="stylesheet" href="css/anime_btn.css">
     <script src="js/btn.js"></script>
+    <script src="js/const.js"></script>
 
     <title>機器の操作(テレビ)</title>
-    
-
-
 
   <script>
         var opration_flag =  true; //操作されたかチェック
-        const DEFAULT_TEMPERATURE=25;// エアコン初期温度
-        const DEFAULT_HUMD =50 ;
-        function  use_vibrate() {
-            navigator.vibrate(100);
-        }
-        function  opration_check() {
-             if(!opration_flag){
-                console.log("index");
-    			// 家電機器初期設定
-                sendIRkit_init_command();
-                scenario_exec("SCENARIO_ALLT_RESET");
-				var val = DEFAULT_TEMPERATURE; //エアコン温度表示
-                location.href="kiki_menu.html";
-			 } else{
-				console.log("index");
-			 }
-			 opration_flag=false;
-		}
-
 
         $(document).ready(function () {
             {
                 console.log("is ready!");
                 setBtnAnim();
-                //setBtnSound();
+				setBtnSound();
                 //
-                const OP_TIME = 200; //操作画面への遷移
-                const NEXTPAGE_TIME = 3400; //操作画面への遷移
-                const NO_OPRATIN_TIME = 30000; //何もしなければ操作画面への遷移
-
-                var temperature_value = DEFAULT_TEMPERATURE; //既定値
-                var aircon_temp_txt1 = $("#aircon_temp_txt"); //エアコン温度表示
-                var purifier_hum_txt1 = $("#purifier_hum_txt"); //湿度表示
-                var humd_value = DEFAULT_HUMD; //既定値
-                purifier_hum_txt1.innerHTML = humd_value;
-                aircon_temp_txt1.innerHTML = temperature_value;
-
-                var light_bright = 3;  //明るさ
-
-                var humidity_arry = { "50": "13-parts5ax475y720.png", "60": "13-parts5bx475y720.png", "70": "13-parts5cx475y720.png", "80": "13-parts5dx475y720.png" };
-
                 // 一定期間操作がなければ　機器操作index
 
-                setInterval(opration_check(), NO_OPRATIN_TIME); //
+			setInterval(function(){opration_check('kiki_menu.html','SCENARIO_POST_TV_RETURNING')},NO_OPRATIN_TIME);
 
 
-                // clearInterval(opration_check);
+			// clearInterval(opration_check);
 
-                scenario_exec("SCENARIO_ALLT_RESET");
 
-                var rep_hits_flag = true; //操作されたかチェック
-
-                function hits_flag(v) {
-                    rep_hits_flag = true;
-                    use_vibrate();
-                    setTimeout(function () {
-                        console.log("kye enabled");
-                        rep_hits_flag = false;
-                    }, 1500);
-                }
 
                 /*
                     イベントハンドラー
@@ -127,7 +80,12 @@
                 });
                 //機器操作インデクス
                 $(document).on('click', '.op_index', function (e) {
+				    console.log("機器操作インデクス");
+				   scenario_exec("SCENARIO_POST_TV_RETURNING");
+					setTimeout(	function (){
                     location.href = "kiki_menu.html";
+					} , 2500);	
+
                 });
 
                 $(document).on('click', function (e) {
@@ -140,7 +98,7 @@
   </script>
 </head>
 
-<body>
+<body oncontextmenu="return false;">
 
 
         <div style="position: relative;margin: 0px; padding: 0px;width:100%;height: auto;">
@@ -150,7 +108,8 @@
 		    <img border="0" src="./hdimages/btn_tv_chdown.png"  id="tv_ch_down"  alt="チャンネル下" class="btn_tap_anim btn_tap_sound" style="position:absolute;left:1121px;top:1010px;" >
 		    <img border="0" src="./hdimages/btn_tv_chideji.png" id="tv_chidegi" alt="地デジ" class="btn_tap_anim btn_tap_sound" style="position:absolute;left:1853px;top:486px" >
 		    <img border="0" src="./hdimages/btn_tv_bs.png"   id="tv_bs"  alt="BS" class="btn_tap_anim btn_tap_sound" style="position:absolute;left:1853px;top:942px;" >
-            <img border="0" src="./hdimages/btn_kiki_return.png" alt="戻る" class="btn_tap_anim btn_tap_sound op_index" style="position:absolute;left:145px;top:1424px;">    
+            <img border="0" src="./hdimages/btn_kiki_return.png" alt="戻る" class="btn_tap_anim btn_tap_sound op_index" style="position:absolute;left:145px;top:1424px;">
+                
         </div>   
 </body>
 </html>
