--- a/miruene_demo_v2/www/pre_kyuji.html
+++ b/miruene_demo_v2/www/pre_kyuji.html
@@ -45,7 +45,7 @@
  </script>
 </head>
 
-<body>
+<body oncontextmenu="return false;">
    
     <div style="position: relative;margin: 0px; padding: 0px;width:100%;height: auto;">
 	<img border="0" src="./images/16-back.png" alt="餌" style="position: absolute;top:0;left:0;width:1280px">
