--- a/miruene_demo_v2/www/pre_shomei.html
+++ b/miruene_demo_v2/www/pre_shomei.html
@@ -40,7 +40,7 @@
   </script>
 </head>
 
-<body>
+<body oncontextmenu="return false;">
 
  <!-- 照明説明 -->
     <div style="position: relative;margin: 0px; padding: 0px;width:100%;height: auto;">
