--- a/miruene_demo_v2/www/pre_tv.html
+++ b/miruene_demo_v2/www/pre_tv.html
@@ -39,7 +39,7 @@
   </script>
 </head>
 
-<body>
+<body oncontextmenu="return false;">
 
  <!-- 
 テレビ
@@ -48,7 +48,7 @@
     <div style="position: relative;margin: 0px; padding: 0px;width:100%;height: auto;">
         <div style="position: relative;margin: 0px; padding: 0px;width:100%;height: auto;">
             <img border="0" src="./hdimages/bk_pre_tv.png" width="2736" height="1824" style="position: absolute;top:0;left:0;">
-            <img border="0" src="./hdimages//red_pre_tv.png" width="2736" height="1824" style="position: absolute;top:0;left:0;">
+            <img border="0" src="./hdimages//red_pre_tv.png"  class="blink_anime" width="2736" height="1824" style="position: absolute;top:0;left:0;">
         </div>
     </div>
 </body>
